--- a/phaidra-fedora-glue/pom.xml
+++ b/phaidra-fedora-glue/pom.xml
@@ -71,6 +71,13 @@
       <artifactId>xercesImpl</artifactId>
       <version>2.9.1</version>
     </dependency>
+
+	<dependency>
+		<groupId>javax.servlet</groupId>
+		<artifactId>servlet-api</artifactId>
+		<version>2.4</version>
+	</dependency>
+	
   </dependencies>
 
 </project>
